; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_quatech_daqp_cs.c_daqp_cs_detach.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_quatech_daqp_cs.c_daqp_cs_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcmcia_device = type { i64, %struct.local_info_t* }
%struct.local_info_t = type { i32, i64 }

@.str = private unnamed_addr constant [22 x i8] c"daqp_cs_detach(0x%p)\0A\00", align 1
@dev_table = common dso_local global i32** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pcmcia_device*)* @daqp_cs_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @daqp_cs_detach(%struct.pcmcia_device* %0) #0 {
  %2 = alloca %struct.pcmcia_device*, align 8
  %3 = alloca %struct.local_info_t*, align 8
  store %struct.pcmcia_device* %0, %struct.pcmcia_device** %2, align 8
  %4 = load %struct.pcmcia_device*, %struct.pcmcia_device** %2, align 8
  %5 = getelementptr inbounds %struct.pcmcia_device, %struct.pcmcia_device* %4, i32 0, i32 1
  %6 = load %struct.local_info_t*, %struct.local_info_t** %5, align 8
  store %struct.local_info_t* %6, %struct.local_info_t** %3, align 8
  %7 = load %struct.pcmcia_device*, %struct.pcmcia_device** %2, align 8
  %8 = call i32 @DEBUG(i32 0, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), %struct.pcmcia_device* %7)
  %9 = load %struct.pcmcia_device*, %struct.pcmcia_device** %2, align 8
  %10 = getelementptr inbounds %struct.pcmcia_device, %struct.pcmcia_device* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load %struct.local_info_t*, %struct.local_info_t** %3, align 8
  %15 = getelementptr inbounds %struct.local_info_t, %struct.local_info_t* %14, i32 0, i32 0
  store i32 1, i32* %15, align 8
  %16 = load %struct.pcmcia_device*, %struct.pcmcia_device** %2, align 8
  %17 = call i32 @daqp_cs_release(%struct.pcmcia_device* %16)
  br label %18

18:                                               ; preds = %13, %1
  %19 = load i32**, i32*** @dev_table, align 8
  %20 = load %struct.local_info_t*, %struct.local_info_t** %3, align 8
  %21 = getelementptr inbounds %struct.local_info_t, %struct.local_info_t* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = getelementptr inbounds i32*, i32** %19, i64 %22
  store i32* null, i32** %23, align 8
  %24 = load %struct.local_info_t*, %struct.local_info_t** %3, align 8
  %25 = icmp ne %struct.local_info_t* %24, null
  br i1 %25, label %26, label %29

26:                                               ; preds = %18
  %27 = load %struct.local_info_t*, %struct.local_info_t** %3, align 8
  %28 = call i32 @kfree(%struct.local_info_t* %27)
  br label %29

29:                                               ; preds = %26, %18
  ret void
}

declare dso_local i32 @DEBUG(i32, i8*, %struct.pcmcia_device*) #1

declare dso_local i32 @daqp_cs_release(%struct.pcmcia_device*) #1

declare dso_local i32 @kfree(%struct.local_info_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
